auth-service added